baml_language/crates/baml_tests/snapshots/compiles/json_cross_namespace_static_call/baml_tests__compiles__json_cross_namespace_static_call__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.decode_auto(j: baml.json.json) -> root.pkg.inner.AutoBox<int>  [expr] {
  {  } root.pkg.inner.AutoBox.from_json(j)
}
function user.decode_plain(j: baml.json.json) -> root.pkg.inner.Plain  [expr] {
  {  } root.pkg.inner.Plain.from_json(j)
}
function user.decode_root(j: baml.json.json) -> root.pkg.inner.Box<int>  [expr] {
  {  } root.pkg.inner.Box.from_json(j)
}
class user.pkg.inner.AutoBox {
  value: T
}
class user.pkg.inner.AutoBox$stream {
  value: T | null
}
class user.pkg.inner.Box {
  value: T
}
class user.pkg.inner.Box$stream {
  value: T | null
}
class user.pkg.inner.Plain {
  n: int
}
class user.pkg.inner.Plain$stream {
  n: int | null
}
